--- a/src/All-in-one/TestBox.css
+++ b/src/All-in-one/TestBox.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 70vh;
+  height: 100vh;
 }
 
 .cont {
@@ -20,6 +20,16 @@
   padding: 10px;
   background-color: darkslategray;
   border-radius: 5px;
+  margin-top: 40px;
+}
+
+.cont-last {
+  width: 150px;
+  height: 150px;
+  padding: 10px;
+  background-color: darkred;
+  border-radius: 5px;
+  margin-top: 40px;
 }
 
 .main-btn button {
