--- a/src/expandable/Card.css
+++ b/src/expandable/Card.css
@@ -8,6 +8,7 @@ body {
 .App {
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -16,6 +17,7 @@ body {
   position: relative;
   background: white;
   padding: 3.5rem 3rem;
+  margin-bottom: 1rem;
 }
 
 .expand {
